src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Product_Focus_Agile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Focus - Agile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Focus_Core__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Focus - Core</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Focus_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Focus - Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Focus_PaaS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Focus - PaaS</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>FullAccess</sharingModel>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>FY16_Data_Campaigns</fullName>
        <booleanFilter>1 AND ((2 AND 3) OR (4 AND 5))</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Product_Focus_Data__c</columns>
        <columns>Product_Focus_Agile__c</columns>
        <columns>Product_Focus_PaaS__c</columns>
        <columns>Product_Focus_Core__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Focus_Data__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2016</value>
        </filters>
        <label>FY16 Data Campaigns</label>
    </listViews>
    <listViews>
        <fullName>FY16_OSS_Campaigns</fullName>
        <booleanFilter>1 AND ((2 AND 3) OR (4 AND 5))</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_RESPONSES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>OSS</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2016</value>
        </filters>
        <label>FY16 OSS Campaigns</label>
    </listViews>
    <listViews>
        <fullName>FY16_PCF_Campaigns</fullName>
        <booleanFilter>1 AND ((2 AND 3) OR (4 AND 5))</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Product_Focus_Data__c</columns>
        <columns>Product_Focus_Agile__c</columns>
        <columns>Product_Focus_PaaS__c</columns>
        <columns>Product_Focus_Core__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Focus_PaaS__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2016</value>
        </filters>
        <label>FY16 PCF Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
</CustomObject>